force-app/main/default/objects/BLN_PDSCode__c/BLN_PDSCode__c.object-meta.xml
<CustomObject>
    <description>FOUK-6160 PDS - Capturing scheme &amp; contract codes on B2B Accounts</description>
    <label>PDS Code</label>
    <nameField>
        <displayFormat>PDSC-{000000}</displayFormat>
        <label>PDS Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PDS Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>