force-app/main/default/objects/BLN_PDSCode__c/fields/BLN_Account__c.field-meta.xml
<CustomField>
    <fullName>BLN_Account__c</fullName>
    <description>FOUK-6160</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PDS Codes</relationshipLabel>
    <relationshipName>PDS_Codes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>