force-app/main/default/objects/BLN_PDSCode__c/fields/BLN_LegacyPDSCodeId__c.field-meta.xml
<CustomField>
    <fullName>BLN_LegacyPDSCodeId__c</fullName>
    <description>R2DM-290</description>
    <externalId>true</externalId>
    <label>Legacy PDS Code Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>