force-app/main/default/objects/BLN_PDSCode__c/fields/BLN_MDMPDSCode__c.field-meta.xml
<CustomField>
    <fullName>BLN_MDMPDSCode__c</fullName>
    <description>FOUK-11876</description>
    <label>MDM PDS Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>