force-app/main/default/objects/BLN_PDSCode__c/fields/BLN_MDMPDSCodeID__c.field-meta.xml
<CustomField>
    <fullName>BLN_MDMPDSCodeID__c</fullName>
    <description>FOUK-11876</description>
    <label>MDM PDS Code ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>