force-app/main/default/objects/BLN_PDSCode__c/fields/BLN_SchemeCode__c.field-meta.xml
<CustomField>
    <fullName>BLN_SchemeCode__c</fullName>
    <description>FOUK-6160</description>
    <label>Scheme Code</label>
    <length>225</length>
    <type>Text</type>
</CustomField>